# ai_system_implementation_project

./: CLAUDE.md  README.md  bentofile.yaml  dvc.yaml  metrics.json  params.yaml  pyproject.toml  service.py
data/: .gitignore
src/: download_data.py  evaluate.py  prepare_data.py  register_bentoml.py  train_model.py
